--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,21 +79,24 @@
       <div class="innermain" id="inner2">
         <div class="textContainer">
           <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
-          <p>
-            På denne graf kan du se den samlede udledning af CO2 for de enkelte
-            madvare som indgår i måltiderne
-          </p>
-          <p>
-            Hvis du holder musen over en af barene kan du se hvor meget CO2 den
-            givene sektor tilføjer til den samlede udledning
-          </p>
-          <p>
-            ILUC =
-            <a
+          <div class="textbox1">
+
+            <p>
+              På denne graf kan du se den samlede udledning af CO2 for de enkelte
+              madvare som indgår i måltiderne
+            </p>
+            <p>
+              Hvis du holder musen over en af barene kan du se hvor meget CO2 den
+              givene sektor tilføjer til den samlede udledning
+            </p>
+            <p>
+              ILUC =
+              <a
               href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787"
               >Indirect Land Use Change (ILUC)</a
-            >
-          </p>
+              >
+            </p>
+          </div>
         </div>
       </div>
       <div class="header"></div>
@@ -237,10 +240,11 @@
     </div>
 
     <div class="main" id="main8">
-      <div class="header"></div>
+      
       <div class="innermain" id="inner8">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
       </div>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main9">
