ændret lidt på forside

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
       <div class="header"></div>
       <div class="innermain" id="inner0">
         <h1>Red Planeten - Dine Daglige Valg Gør en Forskel</h1>
-        <p>
+        <p id="undertekst">
           Hvert år øges fokus på behovet for at redde vores elskede planet. Men
           hvilke skridt kan hver enkelt af os tage for at sikre en bæredygtig
           fremtid? På denne side vil du blive guidet gennem en typisk hverdag og
