--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,10 +81,7 @@
           <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
           <div class="textbox1">
 
-            <p>
-              På denne graf kan du se den samlede udledning af CO2 for de enkelte
-              madvare som indgår i måltiderne
-            </p>
+
             <p>
               Hvis du holder musen over en af barene kan du se hvor meget CO2 den
               givene sektor tilføjer til den samlede udledning
@@ -198,7 +195,7 @@
     <div class="main" id="main6">
       <div class="innermain" id="inner6">
         <div class="textFor12">
-          <div class="dynamicContent8">Ja, forskellige transportmidler udleder altså forskellige mængder CO2 pr. km.</div>
+          <div id="dynamicContent3">Ja, forskellige transportmidler udleder altså forskellige mængder CO2 pr. km.</div>
         </div>
         <div id="test"></div>
       </div>
