Tilføjet en infobox

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,13 +86,7 @@
               Hvis du holder musen over en af barene kan du se hvor meget CO2 den
               givene sektor tilføjer til den samlede udledning
             </p>
-            <p>
-              ILUC =
-              <a
-              href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787"
-              >Indirect Land Use Change (ILUC)</a
-              >
-            </p>
+            <div id="infoBox" class="info-box" style="position: absolute; opacity: 0; background-color: white; border: solid 1px; border-radius: 5px; padding: 10px; pointer-events: none; color: black;"></div>
           </div>
         </div>
       </div>
