--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,9 @@
     <!-- Buttons til quiz scroller -->
 
     <div class="main" id="main0">
-      <div class="header"></div>
       <div class="innermain" id="inner0">
         <h1>Red Planeten - Dine Daglige Valg Gør en Forskel</h1>
-        <p>
+        <p id="undertekst">
           Hvert år øges fokus på behovet for at redde vores elskede planet. Men
           hvilke skridt kan hver enkelt af os tage for at sikre en bæredygtig
           fremtid? På denne side vil du blive guidet gennem en typisk hverdag og
@@ -29,6 +28,7 @@
         </p>
         <img src="Images\white-earth.png" alt="billede af hvid jordklode" />
       </div>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main1">
@@ -148,8 +148,6 @@
         <div id="graf"></div>
       </div>
       <button id="updateChartBtn">Tænd for vandet</button>
-      <div class="header"></div>
-
     </div>
 
     <div class="main" id="main5">
@@ -196,7 +194,7 @@
     <div class="main" id="main6">
       <div class="innermain" id="inner6">
         <div class="textFor12">
-          <div class="dynamicContent8">Ja, forskellige transportmidler udleder altså forskellige mængder CO2 pr. km.</div>
+          <div id="dynamicContent3">Ja, forskellige transportmidler udleder altså forskellige mængder CO2 pr. km.</div>
         </div>
         <div id="test"></div>
       </div>
@@ -287,7 +285,6 @@
     </div>
 
     <div class="main" id="main10">
-      <div class="header"></div>
       <div class="innermain" id="inner10">
         <div id="factBox"></div>
         <svg id="uniqueSvg" width="1200" height="800"></svg>
@@ -295,7 +292,6 @@
           <p>Her kan du sætte den dynamiske text</p>
         </div>
       </div>
-
     </div>
 
     <div class="main" id="main11">
@@ -376,8 +372,6 @@
 
     <div class="main" id="main14">
       <div class="innermain" id="inner14"></div>
-      <div class="header"></div>
-
     </div>
 
     <div class="main" id="main15">
@@ -421,8 +415,6 @@
           <div class="dynamicContent8">Her kan du se, at det ville udlede en del mere CO2 at se Netflix - eller en anden slags streaming - i forhold til at "snakke" med ChatGPT. <br><br> Vi har taget udgangspunkt i at man streamer 1,5 time sammenlignet med, at man fører en samtale med ChatGPT, som ender på 90 beskeder fra dig. <br><br>Én henvendelse til ChatGPT udleder ca. 0,5g CO2. </div>
         </div>
       </div>
-      <div class="header"></div>
-
     </div>
 
     <div class="main" id="main17">
