--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,21 +79,13 @@
       <div class="innermain" id="inner2">
         <div class="textContainer">
           <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
-          <p>
-            På denne graf kan du se den samlede udledning af CO2 for de enkelte
-            madvare som indgår i måltiderne
-          </p>
-          <p>
-            Hvis du holder musen over en af barene kan du se hvor meget CO2 den
-            givene sektor tilføjer til den samlede udledning
-          </p>
-          <p>
-            ILUC =
-            <a
-              href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787"
-              >Indirect Land Use Change (ILUC)</a
-            >
-          </p>
+          <div class="textbox1">
+            <p>
+              Hvis du holder musen over en af barene kan du se hvor meget CO2 den
+              givene sektor tilføjer til den samlede udledning
+            </p>
+            <div id="infoBox" class="info-box" style="position: absolute; opacity: 0; background-color: white; border: solid 1px; border-radius: 5px; padding: 10px; pointer-events: none; color: black;"></div>
+          </div>
         </div>
       </div>
       <div class="header"></div>
@@ -148,6 +140,7 @@
         <div id="graf"></div>
       </div>
       <button id="updateChartBtn">Tænd for vandet</button>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main5">
@@ -240,10 +233,10 @@
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
       </div>
       <div class="header"></div>
-
     </div>
 
     <div class="main" id="main9">
+      <div class="header"></div>
       <div class="innermain" id="inner9">
         <div>
           <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
@@ -292,9 +285,11 @@
           <p>Her kan du sætte den dynamiske text</p>
         </div>
       </div>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main11">
+      <div class="header"></div>
       <div class="innermain" id="inner11">
         <div>
           <h1 class="question">Tid til Din Hobby - Dagens Højdepunkt</h1>
@@ -372,6 +367,7 @@
 
     <div class="main" id="main14">
       <div class="innermain" id="inner14"></div>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main15">
@@ -415,6 +411,7 @@
           <div class="dynamicContent8">Her kan du se, at det ville udlede en del mere CO2 at se Netflix - eller en anden slags streaming - i forhold til at "snakke" med ChatGPT. <br><br> Vi har taget udgangspunkt i at man streamer 1,5 time sammenlignet med, at man fører en samtale med ChatGPT, som ender på 90 beskeder fra dig. <br><br>Én henvendelse til ChatGPT udleder ca. 0,5g CO2. </div>
         </div>
       </div>
+      <div class="header"></div>
     </div>
 
     <div class="main" id="main17">
