--- a/frontend/index.html
+++ b/frontend/index.html
@@ -230,10 +230,19 @@
 
     <div class="main" id="main8">
       <div class="innermain" id="inner8">
+        <div class="textContainer">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div class="textbox1">
+          <p>
+            Hvis du holder musen over en af barene kan du se hvor meget CO2 den
+            givene sektor tilføjer til den samlede udledning
+          </p>
+        </div>
       </div>
-      <div class="header"></div>
     </div>
+    <div class="header"></div>
+  </div>
+
 
     <div class="main" id="main9">
       <div class="header"></div>
@@ -366,9 +375,19 @@
     </div>
 
     <div class="main" id="main14">
-      <div class="innermain" id="inner14"></div>
-      <div class="header"></div>
+      <div class="innermain" id="inner14">
+        <div class="textContainer">
+        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div class="textbox1">
+          <p>
+            Hvis du holder musen over en af barene kan du se hvor meget CO2 den
+            givene sektor tilføjer til den samlede udledning
+          </p>
+        </div>
+      </div>
     </div>
+    <div class="header"></div>
+  </div>
 
     <div class="main" id="main15">
       <div class="header"></div>
