--- a/frontend/index.html
+++ b/frontend/index.html
@@ -231,7 +231,7 @@
     <div class="main" id="main8">
       <div class="innermain" id="inner8">
         <div class="textContainer">
-        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div id="dynamicContent4">Indholdet ændres dynamisk her.</div>
         <div class="textbox1">
           <p>
             Hvis du holder musen over en af barene kan du se hvor meget CO2 den
@@ -377,7 +377,7 @@
     <div class="main" id="main14">
       <div class="innermain" id="inner14">
         <div class="textContainer">
-        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div id="dynamicContent7">Indholdet ændres dynamisk her.</div>
         <div class="textbox1">
           <p>
             Hvis du holder musen over en af barene kan du se hvor meget CO2 den
