rettet en dynamiccontent

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -291,7 +291,7 @@
         <div id="factBox"></div>
         <svg id="uniqueSvg" width="1200" height="800"></svg>
         <div class="textForMap">
-          <p>Her kan du sætte den dynamiske text</p>
+          <p id="dynamicContent5">Her kan du sætte den dynamiske text</p>
         </div>
       </div>
       <div class="header"></div>
