ændringer til dynamiske tekster

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
       </div>
       <div class="innermain" id="inner4">
         <div class="textFor6">
-          <div class="dynamicContent8">Hvis du "tænder for vandet" ved at klikke knappen herunder, kan du se, hvordan din CO2 udledning vil se ud, imens du står under bruseren. Den blå linjer viser din udledning ved et koldt bad - dvs. 10 grader varmt vand. Den røde linjer viser din udledning, hvis du tager et varmt bad på ca. 40 grader</div>
+          <div class="dynamicContent8" id="dynamicContent1">Hvis du "tænder for vandet" ved at klikke knappen herunder, kan du se, hvordan din CO2 udledning vil se ud, imens du står under bruseren. Den blå linjer viser din udledning ved et koldt bad - dvs. 10 grader varmt vand. Den røde linjer viser din udledning, hvis du tager et varmt bad på ca. 40 grader</div>
         </div>
         <div id="graf"></div>
       </div>
@@ -230,7 +230,7 @@
 
     <div class="main" id="main8">
       <div class="innermain" id="inner8">
-        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div id="dynamicContent2">Indholdet ændres dynamisk her.</div>
       </div>
       <div class="header"></div>
     </div>
@@ -257,21 +257,21 @@
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Miami
+            Miami (fly)
           </button>
           <button
             id="dillema5Knap2"
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Barcelona
+            Barcelona (bil)
           </button>
           <button
             id="dillema5Knap3"
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Helsinki
+            Helsinki (bil)
           </button>
         </div>
       </div>
