Tilføjet boks til alle, og dynamisk tekst til alle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
       </div>
       <div class="innermain" id="inner4">
         <div class="textFor6">
-          <div class="dynamicContent8" id="dynamicContent1">Hvis du "tænder for vandet" ved at klikke knappen herunder, kan du se, hvordan din CO2 udledning vil se ud, imens du står under bruseren. Den blå linjer viser din udledning ved et koldt bad - dvs. 10 grader varmt vand. Den røde linjer viser din udledning, hvis du tager et varmt bad på ca. 40 grader</div>
+          <div class="dynamicContent8" id="dynamicContent2">Hvis du "tænder for vandet" ved at klikke knappen herunder, kan du se, hvordan din CO2 udledning vil se ud, imens du står under bruseren. Den blå linjer viser din udledning ved et koldt bad - dvs. 10 grader varmt vand. Den røde linjer viser din udledning, hvis du tager et varmt bad på ca. 40 grader</div>
         </div>
         <div id="graf"></div>
       </div>
@@ -334,7 +334,9 @@
     <div class="main" id="main12">
       <div class="innermain" id="inner12">
         <div class="textFor6">
-          <div class="dynamicContent8">Til venstre kan du se en repræsentation af, hvor meget CO2 du ville udlede, hvis du tog til motocrosstræning ift. hvis du tog til spejder og lavede bål med nogle af de andre blåskjorter. <br><br> Fun fact: Til en motocrosstræning bruger man ca. 11,5 liter benzin. <br><br>Vidste du, at man ved at brænde ét kg træ af udleder ca. 1,65 kg CO2. Altså mere end træets vægt!</div>
+          <div class="dynamicContent8" id="dynamicContent6">Til venstre kan du se en repræsentation af, hvor meget CO2 du ville udlede, hvis du tog til motocrosstræning ift. hvis du tog til spejder og lavede bål med nogle af de andre blåskjorter.</div>
+           <p>Fun fact: Til en motocrosstræning bruger man ca. 11,5 liter benzin.</p>
+           <p>Vidste du, at man ved at brænde ét kg træ af udleder ca. 1,65 kg CO2. Altså mere end træets vægt!</p>
         </div>
       </div>
       <div class="header"></div>
@@ -427,7 +429,9 @@
     <div class="main" id="main16">
       <div class="innermain" id="inner16">
         <div class="textFor8">
-          <div class="dynamicContent8">Her kan du se, at det ville udlede en del mere CO2 at se Netflix - eller en anden slags streaming - i forhold til at "snakke" med ChatGPT. <br><br> Vi har taget udgangspunkt i at man streamer 1,5 time sammenlignet med, at man fører en samtale med ChatGPT, som ender på 90 beskeder fra dig. <br><br>Én henvendelse til ChatGPT udleder ca. 0,5g CO2. </div>
+          <div class="dynamicContent8" id="dynamicContent8">Her kan du se, at det ville udlede en del mere CO2 at se Netflix - eller en anden slags streaming - i forhold til at "snakke" med ChatGPT.</div>
+            <p>Vi har taget udgangspunkt i at man streamer 1,5 time sammenlignet med, at man fører en samtale med ChatGPT, som ender på 90 beskeder fra dig.</p>
+               <p>Én henvendelse til ChatGPT udleder ca. 0,5g CO2.</p>
         </div>
       </div>
       <div class="header"></div>
